--- a/EchoQuizzer/public/style.css
+++ b/EchoQuizzer/public/style.css
@@ -52,7 +52,7 @@ h3{
 }
 .next{
     display: flex;
-    justify-content: center;
+    justify-content:right;
     margin:40px 0 20px 0;
 }
 .next button{
@@ -66,6 +66,11 @@ h3{
     cursor: pointer;
     font-weight: 500;
     display: none;
+}
+.microphone {
+    display: flex;
+    justify-content: center;
+    /* margin: 40px 0 20px 0; */
 }
 .correct{
     background-color: #9aeabc;
